# morphsync

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
data/minnie65_864691134918461194/: morph_info.json
examples/: index.html
examples/examples/: index.html
search/: search_index.json
src/morphlink/: annotation.py  base.py  graph.py  mesh.py  morph.py  points.py
src/morphsync/: __init__.py  base.py  data.py  graph.py  integration.py  io.py  mapping.py  mesh.py  morph.py  points.py  table.py
tutorial/: index.html
