[project]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
]
description = "Add your description here"
name = "morphlink"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
dev-dependencies = [
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-macros-plugin>=1.3.5",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-material>=9.5.41",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[crystal,python]>=0.26.2",
    "mknotebooks>=0.8.0",
    "pymdown-extensions>=10.11.2",
]
